docsys/src/main/node/docsys/antlr/CQL3Parser.js
// Generated from CQL3.g4 by ANTLR 4.5
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CQL3Listener = require('./CQL3Listener').CQL3Listener;
var CQL3Visitor = require('./CQL3Visitor').CQL3Visitor;

var grammarFileName = "CQL3.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "';'", "'('", "')'", "','", "'='", "'+'", "'-'", 
                     "'['", "']'", "'?'", "'.'", "':'", "'{'", "'}'", "'ascii'", 
                     "'bigint'", "'blob'", "'boolean'", "'counter'", "'decimal'", 
                     "'double'", "'float'", "'inet'", "'int'", "'text'", 
                     "'tinyint'", "'timestamp'", "'timeuuid'", "'uuid'", 
                     "'varchar'", "'varint'", "'list'", "'<'", "'>'", "'set'", 
                     "'map'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', "K_ADD", "K_ALTER", "K_AND", "K_APPLY", 
                      "K_BATCH", "K_BEGIN", "K_CLUSTERING", "K_ASC", "K_DESC", 
                      "K_COLUMNFAMILY", "K_COMPACT", "K_COUNTER", "K_CREATE", 
                      "K_CUSTOM", "K_DELETE", "K_DROP", "K_EXISTS", "K_FALSE", 
                      "K_FROM", "K_IF", "K_IN", "K_INDEX", "K_INSERT", "K_INTO", 
                      "K_KEY", "K_KEYSPACE", "K_NOT", "K_ON", "K_OPTIONS", 
                      "K_ORDER", "K_BY", "K_PRIMARY", "K_SELECT", "K_SET", 
                      "K_STATIC", "K_STORAGE", "K_TABLE", "K_TIMESTAMP", 
                      "K_TRUE", "K_TRUNCATE", "K_TTL", "K_TYPE", "K_UNLOGGED", 
                      "K_UPDATE", "K_USE", "K_USING", "K_VALUES", "K_WHERE", 
                      "K_WITH", "IDENTIFIER", "STRING", "INTEGER", "FLOAT", 
                      "UUID", "BLOB", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
                      "WS" ];

var ruleNames =  [ "statements", "statement", "dml_statements", "dml_statement", 
                   "create_keyspace_stmt", "alter_keyspace_stmt", "drop_keyspace_stmt", 
                   "use_stmt", "create_table_stmt", "alter_table_stmt", 
                   "alter_table_instruction", "drop_table_stmt", "truncate_table_stmt", 
                   "create_index_stmt", "drop_index_stmt", "insert_stmt", 
                   "column_names", "column_values", "upsert_options", "upsert_option", 
                   "index_name", "index_class", "index_options", "update_stmt", 
                   "update_assignments", "update_assignment", "update_conditions", 
                   "update_condition", "where_clause", "relation", "delete_stmt", 
                   "delete_conditions", "delete_condition", "delete_selections", 
                   "delete_selection", "batch_stmt", "batch_options", "batch_option", 
                   "table_name", "table_name_noks", "column_name", "table_options", 
                   "table_option", "asc_or_desc", "column_definitions", 
                   "column_definition", "column_type", "primary_key", "partition_key", 
                   "clustering_column", "keyspace_name", "if_not_exists", 
                   "if_exists", "constant", "variable", "term", "collection", 
                   "map", "set", "list", "function", "properties", "property", 
                   "property_name", "property_value", "data_type", "native_type", 
                   "collection_type", "bool" ];

function CQL3Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CQL3Parser.prototype = Object.create(antlr4.Parser.prototype);
CQL3Parser.prototype.constructor = CQL3Parser;

Object.defineProperty(CQL3Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CQL3Parser.EOF = antlr4.Token.EOF;
CQL3Parser.T__0 = 1;
CQL3Parser.T__1 = 2;
CQL3Parser.T__2 = 3;
CQL3Parser.T__3 = 4;
CQL3Parser.T__4 = 5;
CQL3Parser.T__5 = 6;
CQL3Parser.T__6 = 7;
CQL3Parser.T__7 = 8;
CQL3Parser.T__8 = 9;
CQL3Parser.T__9 = 10;
CQL3Parser.T__10 = 11;
CQL3Parser.T__11 = 12;
CQL3Parser.T__12 = 13;
CQL3Parser.T__13 = 14;
CQL3Parser.T__14 = 15;
CQL3Parser.T__15 = 16;
CQL3Parser.T__16 = 17;
CQL3Parser.T__17 = 18;
CQL3Parser.T__18 = 19;
CQL3Parser.T__19 = 20;
CQL3Parser.T__20 = 21;
CQL3Parser.T__21 = 22;
CQL3Parser.T__22 = 23;
CQL3Parser.T__23 = 24;
CQL3Parser.T__24 = 25;
CQL3Parser.T__25 = 26;
CQL3Parser.T__26 = 27;
CQL3Parser.T__27 = 28;
CQL3Parser.T__28 = 29;
CQL3Parser.T__29 = 30;
CQL3Parser.T__30 = 31;
CQL3Parser.T__31 = 32;
CQL3Parser.T__32 = 33;
CQL3Parser.T__33 = 34;
CQL3Parser.T__34 = 35;
CQL3Parser.T__35 = 36;
CQL3Parser.K_ADD = 37;
CQL3Parser.K_ALTER = 38;
CQL3Parser.K_AND = 39;
CQL3Parser.K_APPLY = 40;
CQL3Parser.K_BATCH = 41;
CQL3Parser.K_BEGIN = 42;
CQL3Parser.K_CLUSTERING = 43;
CQL3Parser.K_ASC = 44;
CQL3Parser.K_DESC = 45;
CQL3Parser.K_COLUMNFAMILY = 46;
CQL3Parser.K_COMPACT = 47;
CQL3Parser.K_COUNTER = 48;
CQL3Parser.K_CREATE = 49;
CQL3Parser.K_CUSTOM = 50;
CQL3Parser.K_DELETE = 51;
CQL3Parser.K_DROP = 52;
CQL3Parser.K_EXISTS = 53;
CQL3Parser.K_FALSE = 54;
CQL3Parser.K_FROM = 55;
CQL3Parser.K_IF = 56;
CQL3Parser.K_IN = 57;
CQL3Parser.K_INDEX = 58;
CQL3Parser.K_INSERT = 59;
CQL3Parser.K_INTO = 60;
CQL3Parser.K_KEY = 61;
CQL3Parser.K_KEYSPACE = 62;
CQL3Parser.K_NOT = 63;
CQL3Parser.K_ON = 64;
CQL3Parser.K_OPTIONS = 65;
CQL3Parser.K_ORDER = 66;
CQL3Parser.K_BY = 67;
CQL3Parser.K_PRIMARY = 68;
CQL3Parser.K_SELECT = 69;
CQL3Parser.K_SET = 70;
CQL3Parser.K_STATIC = 71;
CQL3Parser.K_STORAGE = 72;
CQL3Parser.K_TABLE = 73;
CQL3Parser.K_TIMESTAMP = 74;
CQL3Parser.K_TRUE = 75;
CQL3Parser.K_TRUNCATE = 76;
CQL3Parser.K_TTL = 77;
CQL3Parser.K_TYPE = 78;
CQL3Parser.K_UNLOGGED = 79;
CQL3Parser.K_UPDATE = 80;
CQL3Parser.K_USE = 81;
CQL3Parser.K_USING = 82;
CQL3Parser.K_VALUES = 83;
CQL3Parser.K_WHERE = 84;
CQL3Parser.K_WITH = 85;
CQL3Parser.IDENTIFIER = 86;
CQL3Parser.STRING = 87;
CQL3Parser.INTEGER = 88;
CQL3Parser.FLOAT = 89;
CQL3Parser.UUID = 90;
CQL3Parser.BLOB = 91;
CQL3Parser.SINGLE_LINE_COMMENT = 92;
CQL3Parser.MULTILINE_COMMENT = 93;
CQL3Parser.WS = 94;

CQL3Parser.RULE_statements = 0;
CQL3Parser.RULE_statement = 1;
CQL3Parser.RULE_dml_statements = 2;
CQL3Parser.RULE_dml_statement = 3;
CQL3Parser.RULE_create_keyspace_stmt = 4;
CQL3Parser.RULE_alter_keyspace_stmt = 5;
CQL3Parser.RULE_drop_keyspace_stmt = 6;
CQL3Parser.RULE_use_stmt = 7;
CQL3Parser.RULE_create_table_stmt = 8;
CQL3Parser.RULE_alter_table_stmt = 9;
CQL3Parser.RULE_alter_table_instruction = 10;
CQL3Parser.RULE_drop_table_stmt = 11;
CQL3Parser.RULE_truncate_table_stmt = 12;
CQL3Parser.RULE_create_index_stmt = 13;
CQL3Parser.RULE_drop_index_stmt = 14;
CQL3Parser.RULE_insert_stmt = 15;
CQL3Parser.RULE_column_names = 16;
CQL3Parser.RULE_column_values = 17;
CQL3Parser.RULE_upsert_options = 18;
CQL3Parser.RULE_upsert_option = 19;
CQL3Parser.RULE_index_name = 20;
CQL3Parser.RULE_index_class = 21;
CQL3Parser.RULE_index_options = 22;
CQL3Parser.RULE_update_stmt = 23;
CQL3Parser.RULE_update_assignments = 24;
CQL3Parser.RULE_update_assignment = 25;
CQL3Parser.RULE_update_conditions = 26;
CQL3Parser.RULE_update_condition = 27;
CQL3Parser.RULE_where_clause = 28;
CQL3Parser.RULE_relation = 29;
CQL3Parser.RULE_delete_stmt = 30;
CQL3Parser.RULE_delete_conditions = 31;
CQL3Parser.RULE_delete_condition = 32;
CQL3Parser.RULE_delete_selections = 33;
CQL3Parser.RULE_delete_selection = 34;
CQL3Parser.RULE_batch_stmt = 35;
CQL3Parser.RULE_batch_options = 36;
CQL3Parser.RULE_batch_option = 37;
CQL3Parser.RULE_table_name = 38;
CQL3Parser.RULE_table_name_noks = 39;
CQL3Parser.RULE_column_name = 40;
CQL3Parser.RULE_table_options = 41;
CQL3Parser.RULE_table_option = 42;
CQL3Parser.RULE_asc_or_desc = 43;
CQL3Parser.RULE_column_definitions = 44;
CQL3Parser.RULE_column_definition = 45;
CQL3Parser.RULE_column_type = 46;
CQL3Parser.RULE_primary_key = 47;
CQL3Parser.RULE_partition_key = 48;
CQL3Parser.RULE_clustering_column = 49;
CQL3Parser.RULE_keyspace_name = 50;
CQL3Parser.RULE_if_not_exists = 51;
CQL3Parser.RULE_if_exists = 52;
CQL3Parser.RULE_constant = 53;
CQL3Parser.RULE_variable = 54;
CQL3Parser.RULE_term = 55;
CQL3Parser.RULE_collection = 56;
CQL3Parser.RULE_map = 57;
CQL3Parser.RULE_set = 58;
CQL3Parser.RULE_list = 59;
CQL3Parser.RULE_function = 60;
CQL3Parser.RULE_properties = 61;
CQL3Parser.RULE_property = 62;
CQL3Parser.RULE_property_name = 63;
CQL3Parser.RULE_property_value = 64;
CQL3Parser.RULE_data_type = 65;
CQL3Parser.RULE_native_type = 66;
CQL3Parser.RULE_collection_type = 67;
CQL3Parser.RULE_bool = 68;

function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CQL3Parser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.enterStatements(this);
	}
};

StatementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.exitStatements(this);
	}
};

StatementsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CQL3Visitor ) {
        return visitor.visitStatements(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CQL3Parser.StatementsContext = StatementsContext;

CQL3Parser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CQL3Parser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 138;
        this.statement();
        this.state = 147;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 140; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 139;
                    this.match(CQL3Parser.T__0);
                    this.state = 142; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while(_la===CQL3Parser.T__0);
                this.state = 144;
                this.statement(); 
            }
            this.state = 149;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 151; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 150;
            this.match(CQL3Parser.T__0);
            this.state = 153; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===CQL3Parser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CQL3Parser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.drop_keyspace_stmt = function() {
    return this.getTypedRuleContext(Drop_keyspace_stmtContext,0);
};

StatementContext.prototype.create_keyspace_stmt = function() {
    return this.getTypedRuleContext(Create_keyspace_stmtContext,0);
};

StatementContext.prototype.alter_keyspace_stmt = function() {
    return this.getTypedRuleContext(Alter_keyspace_stmtContext,0);
};

StatementContext.prototype.use_stmt = function() {
    return this.getTypedRuleContext(Use_stmtContext,0);
};

StatementContext.prototype.create_table_stmt = function() {
    return this.getTypedRuleContext(Create_table_stmtContext,0);
};

StatementContext.prototype.alter_table_stmt = function() {
    return this.getTypedRuleContext(Alter_table_stmtContext,0);
};

StatementContext.prototype.drop_table_stmt = function() {
    return this.getTypedRuleContext(Drop_table_stmtContext,0);
};

StatementContext.prototype.truncate_table_stmt = function() {
    return this.getTypedRuleContext(Truncate_table_stmtContext,0);
};

StatementContext.prototype.create_index_stmt = function() {
    return this.getTypedRuleContext(Create_index_stmtContext,0);
};

StatementContext.prototype.drop_index_stmt = function() {
    return this.getTypedRuleContext(Drop_index_stmtContext,0);
};

StatementContext.prototype.insert_stmt = function() {
    return this.getTypedRuleContext(Insert_stmtContext,0);
};

StatementContext.prototype.update_stmt = function() {
    return this.getTypedRuleContext(Update_stmtContext,0);
};

StatementContext.prototype.delete_stmt = function() {
    return this.getTypedRuleContext(Delete_stmtContext,0);
};

StatementContext.prototype.batch_stmt = function() {
    return this.getTypedRuleContext(Batch_stmtContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CQL3Visitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CQL3Parser.StatementContext = StatementContext;

CQL3Parser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CQL3Parser.RULE_statement);
    try {
        this.state = 169;
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 155;
            this.drop_keyspace_stmt();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 156;
            this.create_keyspace_stmt();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 157;
            this.alter_keyspace_stmt();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 158;
            this.use_stmt();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 159;
            this.create_table_stmt();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 160;
            this.alter_table_stmt();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 161;
            this.drop_table_stmt();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 162;
            this.truncate_table_stmt();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 163;
            this.create_index_stmt();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 164;
            this.drop_index_stmt();
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 165;
            this.insert_stmt();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 166;
            this.update_stmt();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 167;
            this.delete_stmt();
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 168;
            this.batch_stmt();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Dml_statementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CQL3Parser.RULE_dml_statements;
    return this;
}

Dml_statementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Dml_statementsContext.prototype.constructor = Dml_statementsContext;

Dml_statementsContext.prototype.dml_statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Dml_statementContext);
    } else {
        return this.getTypedRuleContext(Dml_statementContext,i);
    }
};

Dml_statementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.enterDml_statements(this);
	}
};

Dml_statementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.exitDml_statements(this);
	}
};

Dml_statementsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CQL3Visitor ) {
        return visitor.visitDml_statements(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CQL3Parser.Dml_statementsContext = Dml_statementsContext;

CQL3Parser.prototype.dml_statements = function() {

    var localctx = new Dml_statementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CQL3Parser.RULE_dml_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 171;
        this.dml_statement();
        this.state = 180;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 173; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 172;
                    this.match(CQL3Parser.T__0);
                    this.state = 175; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while(_la===CQL3Parser.T__0);
                this.state = 177;
                this.dml_statement(); 
            }
            this.state = 182;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
        }

        this.state = 184; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 183;
            this.match(CQL3Parser.T__0);
            this.state = 186; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===CQL3Parser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Dml_statementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CQL3Parser.RULE_dml_statement;
    return this;
}

Dml_statementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Dml_statementContext.prototype.constructor = Dml_statementContext;

Dml_statementContext.prototype.insert_stmt = function() {
    return this.getTypedRuleContext(Insert_stmtContext,0);
};

Dml_statementContext.prototype.update_stmt = function() {
    return this.getTypedRuleContext(Update_stmtContext,0);
};

Dml_statementContext.prototype.delete_stmt = function() {
    return this.getTypedRuleContext(Delete_stmtContext,0);
};

Dml_statementContext.prototype.enterRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.enterDml_statement(this);
	}
};

Dml_statementContext.prototype.exitRule = function(listener) {
    if(listener instanceof CQL3Listener ) {
        listener.exitDml_statement(this);
	}
};

Dml_statementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CQL3Visitor ) {
        return visitor.visitDml_statement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CQL3Parser.Dml_statementContext = Dml_statementContext;

CQL3Parser.prototype.dml_statement = function() {
